package br.unitins.tp1.dto;


public record BlocoDTO(
    Integer quantidadeFolhas,
    Long idTextura
) {

}
