package br.unitins.tp1.dto;


public record PapelAvulsoDTO(
    String tipoPapel,
    String tamanho,
    Long idTextura
) {

}
