package br.unitins.tp1.dto;


public record RoloDTO(
    Long idTextura,
    Double comprimento
) {

}
