package br.unitins.tp1.dto;

public record UsuarioDTO(
        String nome,
        String username,
        String login,
        String senha,
        int idPerfil) {

}
