package br.unitins.tp1.model;

import jakarta.persistence.Entity;

@Entity
public class Cliente extends Usuario {

}
