package br.unitins.tp1.model;

public class TecnicaArtistica {
    private String nome;

    public String getNome() {
        return nome;
    }

    public void setNome(String nome) {
        this.nome = nome;
    }

    
}
