@startuml Diagram

 abstract class Produto {
 -Long id 
 -Textura textura 
 }

  class PapelAvulso {}

 class TecnicaArtistica {
  -String nome
 }
 
 class Marca {
-String nome
 }
 
 class Sketchbook{
 -Capa capa
 }
 
 class Bloco {
 -Integer quantidadeFolhas
 }

  
class varianteProduto{
  -Long id
  -String formato
  -int gramatura
  -String cor 
  -double preco
}
 class Rolo {
 -Double comprimento
 }


 
 class EspecificacaoTecnica{
 -Double ph
 -Double opacidade
 -Double absorcao
 }
 
enum Capa {
-String material
}

enum Textura {
-String descricao
-Integer gramatura
}



Textura --* Produto
varianteProduto <-- Produto
varianteProduto <-- itemPedido
EspecificacaoTecnica --* Produto
Marca --o Produto
TecnicaArtistica --> Produto

Sketchbook "1"*--"1" Capa



Produto <|-- Bloco
Produto <|-- Rolo
Produto <|-- Sketchbook
Produto <|-- PapelAvulso
 
class Usuario {
-String nome
-String login
-String senha
}

class Cliente {}

enum FormaDePagamento{
CARTAO_CREDITO "Cartão de crédito"
CARTAO_DEBITO "Cartão de débito"
BOLETO "Boleto"
PIX "Pix"
}

class Compra {
-FormaDePagamento formaDePagamento
-Produto produto
}

class Administrador {}

enum Perfil{
ALTA ""
BAIXA ""
}
class Cupom {
  -String codigo 
  -LocalDateTime validade
  -List<Produto> produtosPermitidos
}
Usuario <-- Perfil
Compra <-- Cliente
Compra *-- Produto
Compra *-- FormaDePagamento
Compra *-- Cupom

Usuario <|-- Administrador
Usuario <|-- Cliente

@enduml